modified button to include function in index.html , initialized array, created function to take user input, total calories, and display

--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
         <label for="calories"> Number of Calories:</label>
         <input type="number" id="calories" placeholder="Add calories">
 
-        <button>Submit</button>
+        <button onclick="addFoodItem()">Submit</button>
 
     </section>
 
-    <!--Total Calories Section -->
-    <section id="totalCalorieDisplay">
-        <label for="totalCalories">Total Calories:</label>
-        <input type="text" id="totalCalories" placeholder="Total Calories">
+        <!-- Total Calories Section -->
+        <section id="totalCalorieDisplay">
+         <label for="totalCalories">Total Calories:</label>
+        <div id="totalCaloriesContainer" placeholder="Total Calories"></div>
     </section>
-    
 </body>
 </html>
